5th Sem/Compilers/Assignment 5/Assignment5/asgn5_19CS10060_19CS10039.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 F: %empty

    3 W: %empty

    4 D: %empty

    5 X: %empty

    6 N: %empty

    7 changetable: %empty

    8 primary_expression: IDENTIFIER
    9                   | INT_CONSTANT
   10                   | FLOAT_CONSTANT
   11                   | CHAR_CONSTANT
   12                   | STRING_LITERAL
   13                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

   14 postfix_expression: primary_expression
   15                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
   16                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
   17                   | postfix_expression DOT IDENTIFIER
   18                   | postfix_expression ARROW IDENTIFIER
   19                   | postfix_expression INCREMENT
   20                   | postfix_expression DECREMENT
   21                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   22                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   23 argument_expression_list_opt: argument_expression_list
   24                             | %empty

   25 argument_expression_list: assignment_expression
   26                         | argument_expression_list COMMA assignment_expression

   27 unary_expression: postfix_expression
   28                 | INCREMENT unary_expression
   29                 | DECREMENT unary_expression
   30                 | unary_operator cast_expression
   31                 | SIZEOF unary_expression
   32                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   33 unary_operator: BITWISE_AND
   34               | MUL
   35               | PLUS
   36               | MINUS
   37               | BITWISE_NOT
   38               | EXCLAIM

   39 cast_expression: unary_expression
   40                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   41 multiplicative_expression: cast_expression
   42                          | multiplicative_expression MUL cast_expression
   43                          | multiplicative_expression DIV cast_expression
   44                          | multiplicative_expression MOD cast_expression

   45 additive_expression: multiplicative_expression
   46                    | additive_expression PLUS multiplicative_expression
   47                    | additive_expression MINUS multiplicative_expression

   48 shift_expression: additive_expression
   49                 | shift_expression LEFTSHIFT additive_expression
   50                 | shift_expression RIGHTSHIFT additive_expression

   51 relational_expression: shift_expression
   52                      | relational_expression LESSTHAN shift_expression
   53                      | relational_expression GREATERTHAN shift_expression
   54                      | relational_expression LESSTHANEQUAL shift_expression
   55                      | relational_expression GREATERTHANEQUAL shift_expression

   56 equality_expression: relational_expression
   57                    | equality_expression EQUALEQUAL relational_expression
   58                    | equality_expression NOTEQUAL relational_expression

   59 and_expression: equality_expression
   60               | and_expression BITWISE_AND equality_expression

   61 exclusive_or_expression: and_expression
   62                        | exclusive_or_expression BITWISE_XOR and_expression

   63 inclusive_or_expression: exclusive_or_expression
   64                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   65 logical_and_expression: inclusive_or_expression
   66                       | logical_and_expression AND M inclusive_or_expression

   67 logical_or_expression: logical_and_expression
   68                      | logical_or_expression OR M logical_and_expression

   69 conditional_expression: logical_or_expression
   70                       | logical_or_expression N QUESTION M expression N COLON M conditional_expression

   71 assignment_expression: conditional_expression
   72                      | unary_expression assignment_operator assignment_expression

   73 assignment_operator: ASSIGN
   74                    | MULTIPLYASSIGN
   75                    | DIVIDEASSIGN
   76                    | MODASSIGN
   77                    | ADDASSIGN
   78                    | SUBTRACTASSIGN
   79                    | LEFTSHIFTASSIGN
   80                    | RIGHTSHIFTASSIGN
   81                    | ANDASSIGN
   82                    | XORASSIGN
   83                    | ORASSIGN

   84 expression: assignment_expression
   85           | expression COMMA assignment_expression

   86 constant_expression: conditional_expression

   87 declaration: declaration_specifiers init_declarator_list SEMICOLON
   88            | declaration_specifiers SEMICOLON

   89 declaration_specifiers: storage_class_specifier declaration_specifiers
   90                       | storage_class_specifier
   91                       | type_specifier declaration_specifiers
   92                       | type_specifier
   93                       | type_qualifier declaration_specifiers
   94                       | type_qualifier
   95                       | function_specifier declaration_specifiers
   96                       | function_specifier

   97 init_declarator_list: init_declarator
   98                     | init_declarator_list COMMA init_declarator

   99 init_declarator: declarator
  100                | declarator ASSIGN initializer

  101 storage_class_specifier: EXTERN
  102                        | STATIC
  103                        | AUTO
  104                        | REGISTER

  105 type_specifier: VOID
  106               | CHAR
  107               | SHORT
  108               | INT
  109               | LONG
  110               | FLOAT
  111               | DOUBLE
  112               | SIGNED
  113               | UNSIGNED
  114               | BOOL
  115               | COMPLEX
  116               | IMAGINARY
  117               | enum_specifier

  118 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  119                         | type_qualifier specifier_qualifier_list_opt

  120 specifier_qualifier_list_opt: %empty
  121                             | specifier_qualifier_list

  122 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  123               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  124               | ENUM IDENTIFIER

  125 identifier_opt: %empty
  126               | IDENTIFIER

  127 enumerator_list: enumerator
  128                | enumerator_list COMMA enumerator

  129 enumerator: IDENTIFIER
  130           | IDENTIFIER ASSIGN constant_expression

  131 type_qualifier: CONST
  132               | RESTRICT
  133               | VOLATILE

  134 function_specifier: INLINE

  135 declarator: pointer direct_declarator
  136           | direct_declarator

  137 direct_declarator: IDENTIFIER
  138                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  139                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  140                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  141                  | direct_declarator SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  142                  | direct_declarator SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  143                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  144                  | direct_declarator SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  145                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list MUL SQUARE_BRACKET_CLOSE
  146                  | direct_declarator SQUARE_BRACKET_OPEN MUL SQUARE_BRACKET_CLOSE
  147                  | direct_declarator ROUND_BRACKET_OPEN changetable parameter_type_list ROUND_BRACKET_CLOSE
  148                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE
  149                  | direct_declarator ROUND_BRACKET_OPEN changetable ROUND_BRACKET_CLOSE

  150 type_qualifier_list_opt: %empty
  151                        | type_qualifier_list

  152 pointer: MUL type_qualifier_list_opt
  153        | MUL type_qualifier_list_opt pointer

  154 type_qualifier_list: type_qualifier
  155                    | type_qualifier_list type_qualifier

  156 parameter_type_list: parameter_list
  157                    | parameter_list COMMA ELLIPSIS

  158 parameter_list: parameter_declaration
  159               | parameter_list COMMA parameter_declaration

  160 parameter_declaration: declaration_specifiers declarator
  161                      | declaration_specifiers

  162 identifier_list: IDENTIFIER
  163                | identifier_list COMMA IDENTIFIER

  164 type_name: specifier_qualifier_list

  165 initializer: assignment_expression
  166            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  167            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  168 initializer_list: designation_opt initializer
  169                 | initializer_list COMMA designation_opt initializer

  170 designation_opt: %empty
  171                | designation

  172 designation: designator_list ASSIGN

  173 designator_list: designator
  174                | designator_list designator

  175 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  176           | DOT IDENTIFIER

  177 statement: labeled_statement
  178          | compound_statement
  179          | expression_statement
  180          | selection_statement
  181          | iteration_statement
  182          | jump_statement

  183 loop_statement: labeled_statement
  184               | expression_statement
  185               | selection_statement
  186               | iteration_statement
  187               | jump_statement

  188 labeled_statement: IDENTIFIER COLON M statement
  189                  | CASE constant_expression COLON statement
  190                  | DEFAULT COLON statement

  191 compound_statement: CURLY_BRACKET_OPEN X changetable block_item_list_opt CURLY_BRACKET_CLOSE

  192 block_item_list_opt: %empty
  193                    | block_item_list

  194 block_item_list: block_item
  195                | block_item_list M block_item

  196 block_item: declaration
  197           | statement

  198 expression_statement: expression SEMICOLON
  199                     | SEMICOLON

  200 selection_statement: IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N
  201                    | IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N ELSE M statement
  202                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  203 iteration_statement: WHILE W ROUND_BRACKET_OPEN X changetable M expression ROUND_BRACKET_CLOSE M loop_statement
  204                    | WHILE W ROUND_BRACKET_OPEN X changetable M expression ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE
  205                    | DO D M loop_statement M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  206                    | DO D CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  207                    | FOR F ROUND_BRACKET_OPEN X changetable declaration M expression_statement M expression N ROUND_BRACKET_CLOSE M loop_statement
  208                    | FOR F ROUND_BRACKET_OPEN X changetable expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M loop_statement
  209                    | FOR F ROUND_BRACKET_OPEN X changetable declaration M expression_statement M expression N ROUND_BRACKET_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE
  210                    | FOR F ROUND_BRACKET_OPEN X changetable expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  211 jump_statement: GOTO IDENTIFIER SEMICOLON
  212               | CONTINUE SEMICOLON
  213               | BREAK SEMICOLON
  214               | RETURN expression SEMICOLON
  215               | RETURN SEMICOLON

  216 translation_unit: external_declaration
  217                 | translation_unit external_declaration

  218 external_declaration: function_definition
  219                     | declaration

  220 function_definition: declaration_specifiers declarator declaration_list_opt changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  221 declaration_list: declaration
  222                 | declaration_list declaration

  223 declaration_list_opt: %empty
  224                     | declaration_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 103
    RESTRICT (259) 132
    REGISTER (260) 104
    BREAK (261) 213
    CASE (262) 189
    CHAR (263) 106
    CONST (264) 131
    CONTINUE (265) 212
    DEFAULT (266) 190
    DO (267) 205 206
    DOUBLE (268) 111
    ELSE (269) 201
    ENUM (270) 122 123 124
    EXTERN (271) 101
    FLOAT (272) 110
    FOR (273) 207 208 209 210
    GOTO (274) 211
    IF (275) 200 201
    INLINE (276) 134
    INT (277) 108
    LONG (278) 109
    RETURN (279) 214 215
    SHORT (280) 107
    SIGNED (281) 112
    SIZEOF (282) 31 32
    STATIC (283) 102 143 144
    STRUCT (284)
    SWITCH (285) 202
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 113
    VOID (289) 105
    VOLATILE (290) 133
    WHILE (291) 203 204 205 206
    BOOL (292) 114
    COMPLEX (293) 115
    IMAGINARY (294) 116
    IDENTIFIER <symp> (295) 8 17 18 124 126 129 130 137 162 163 176 188 211
    INT_CONSTANT <intval> (296) 9
    FLOAT_CONSTANT <char_value> (297) 10
    CHAR_CONSTANT <char_value> (298) 11
    STRING_LITERAL <char_value> (299) 12
    SQUARE_BRACKET_OPEN (300) 15 139 140 141 142 143 144 145 146 175
    SQUARE_BRACKET_CLOSE (301) 15 139 140 141 142 143 144 145 146 175
    ROUND_BRACKET_OPEN (302) 13 16 21 22 32 40 138 147 148 149 200 201 202 203 204 205 206 207 208 209 210
    ROUND_BRACKET_CLOSE (303) 13 16 21 22 32 40 138 147 148 149 200 201 202 203 204 205 206 207 208 209 210
    CURLY_BRACKET_OPEN (304) 21 22 122 123 166 167 191 204 206 209 210 220
    CURLY_BRACKET_CLOSE (305) 21 22 122 123 166 167 191 204 206 209 210 220
    DOT (306) 17 176
    ARROW (307) 18
    INCREMENT (308) 19 28
    DECREMENT (309) 20 29
    BITWISE_AND (310) 33 60
    MUL (311) 34 42 145 146 152 153
    PLUS (312) 35 46
    MINUS (313) 36 47
    BITWISE_NOT (314) 37
    EXCLAIM (315) 38
    DIV (316) 43
    MOD (317) 44
    LEFTSHIFT (318) 49
    RIGHTSHIFT (319) 50
    LESSTHAN (320) 52
    GREATERTHAN (321) 53
    LESSTHANEQUAL (322) 54
    GREATERTHANEQUAL (323) 55
    EQUALEQUAL (324) 57
    NOTEQUAL (325) 58
    BITWISE_XOR (326) 62
    BITWISE_OR (327) 64
    AND (328) 66
    OR (329) 68
    QUESTION (330) 70
    COLON (331) 70 188 189 190
    SEMICOLON (332) 87 88 198 199 205 206 211 212 213 214 215
    ELLIPSIS (333) 157
    ASSIGN (334) 73 100 130 172
    MULTIPLYASSIGN (335) 74
    DIVIDEASSIGN (336) 75
    MODASSIGN (337) 76
    ADDASSIGN (338) 77
    SUBTRACTASSIGN (339) 78
    LEFTSHIFTASSIGN (340) 79
    RIGHTSHIFTASSIGN (341) 80
    ANDASSIGN (342) 81
    XORASSIGN (343) 82
    ORASSIGN (344) 83
    COMMA (345) 22 26 85 98 123 128 157 159 163 167 169
    HASH (346)
    "then" (347)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    M <instr_number> (94)
        on left: 1
        on right: 66 68 70 188 195 200 201 203 204 205 206 207 208 209 210
    F (95)
        on left: 2
        on right: 207 208 209 210
    W (96)
        on left: 3
        on right: 203 204
    D (97)
        on left: 4
        on right: 205 206
    X (98)
        on left: 5
        on right: 191 203 204 207 208 209 210
    N <stat> (99)
        on left: 6
        on right: 70 200 201 207 208 209 210
    changetable (100)
        on left: 7
        on right: 147 149 191 203 204 207 208 209 210 220
    primary_expression <expr> (101)
        on left: 8 9 10 11 12 13
        on right: 14
    postfix_expression <A> (102)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 15 16 17 18 19 20 27
    argument_expression_list_opt <num_params> (103)
        on left: 23 24
        on right: 16
    argument_expression_list <num_params> (104)
        on left: 25 26
        on right: 23 26
    unary_expression <A> (105)
        on left: 27 28 29 30 31 32
        on right: 28 29 31 39 72
    unary_operator <unaryOp> (106)
        on left: 33 34 35 36 37 38
        on right: 30
    cast_expression <A> (107)
        on left: 39 40
        on right: 30 40 41 42 43 44
    multiplicative_expression <expr> (108)
        on left: 41 42 43 44
        on right: 42 43 44 45 46 47
    additive_expression <expr> (109)
        on left: 45 46 47
        on right: 46 47 48 49 50
    shift_expression <expr> (110)
        on left: 48 49 50
        on right: 49 50 51 52 53 54 55
    relational_expression <expr> (111)
        on left: 51 52 53 54 55
        on right: 52 53 54 55 56 57 58
    equality_expression <expr> (112)
        on left: 56 57 58
        on right: 57 58 59 60
    and_expression <expr> (113)
        on left: 59 60
        on right: 60 61 62
    exclusive_or_expression <expr> (114)
        on left: 61 62
        on right: 62 63 64
    inclusive_or_expression <expr> (115)
        on left: 63 64
        on right: 64 65 66
    logical_and_expression <expr> (116)
        on left: 65 66
        on right: 66 67 68
    logical_or_expression <expr> (117)
        on left: 67 68
        on right: 68 69 70
    conditional_expression <expr> (118)
        on left: 69 70
        on right: 70 71 86
    assignment_expression <expr> (119)
        on left: 71 72
        on right: 25 26 72 84 85 139 141 143 144 165
    assignment_operator (120)
        on left: 73 74 75 76 77 78 79 80 81 82 83
        on right: 72
    expression <expr> (121)
        on left: 84 85
        on right: 13 15 70 85 198 200 201 202 203 204 205 206 207 208 209 210 214
    constant_expression (122)
        on left: 86
        on right: 130 175 189
    declaration (123)
        on left: 87 88
        on right: 196 207 209 219 221 222
    declaration_specifiers (124)
        on left: 89 90 91 92 93 94 95 96
        on right: 87 88 89 91 93 95 160 161 220
    init_declarator_list (125)
        on left: 97 98
        on right: 87 98
    init_declarator <symp> (126)
        on left: 99 100
        on right: 97 98
    storage_class_specifier (127)
        on left: 101 102 103 104
        on right: 89 90
    type_specifier (128)
        on left: 105 106 107 108 109 110 111 112 113 114 115 116 117
        on right: 91 92 118
    specifier_qualifier_list (129)
        on left: 118 119
        on right: 121 164
    specifier_qualifier_list_opt (130)
        on left: 120 121
        on right: 118 119
    enum_specifier (131)
        on left: 122 123 124
        on right: 117
    identifier_opt (132)
        on left: 125 126
        on right: 122 123
    enumerator_list (133)
        on left: 127 128
        on right: 122 123 128
    enumerator (134)
        on left: 129 130
        on right: 127 128
    type_qualifier (135)
        on left: 131 132 133
        on right: 93 94 119 154 155
    function_specifier (136)
        on left: 134
        on right: 95 96
    declarator <symp> (137)
        on left: 135 136
        on right: 99 100 138 160 220
    direct_declarator <symp> (138)
        on left: 137 138 139 140 141 142 143 144 145 146 147 148 149
        on right: 135 136 139 140 141 142 143 144 145 146 147 148 149
    type_qualifier_list_opt (139)
        on left: 150 151
        on right: 152 153
    pointer <sym_type> (140)
        on left: 152 153
        on right: 135 153
    type_qualifier_list (141)
        on left: 154 155
        on right: 139 140 143 145 151 155
    parameter_type_list (142)
        on left: 156 157
        on right: 147
    parameter_list (143)
        on left: 158 159
        on right: 156 157 159
    parameter_declaration (144)
        on left: 160 161
        on right: 158 159
    identifier_list (145)
        on left: 162 163
        on right: 148 163
    type_name (146)
        on left: 164
        on right: 21 22 32 40
    initializer <symp> (147)
        on left: 165 166 167
        on right: 100 168 169
    initializer_list (148)
        on left: 168 169
        on right: 21 22 166 167 169
    designation_opt (149)
        on left: 170 171
        on right: 168 169
    designation (150)
        on left: 172
        on right: 171
    designator_list (151)
        on left: 173 174
        on right: 172 174
    designator (152)
        on left: 175 176
        on right: 173 174
    statement <stat> (153)
        on left: 177 178 179 180 181 182
        on right: 188 189 190 197 200 201 202
    loop_statement <stat> (154)
        on left: 183 184 185 186 187
        on right: 203 205 207 208
    labeled_statement <stat> (155)
        on left: 188 189 190
        on right: 177 183
    compound_statement <stat> (156)
        on left: 191
        on right: 178
    block_item_list_opt <stat> (157)
        on left: 192 193
        on right: 191 204 206 209 210 220
    block_item_list <stat> (158)
        on left: 194 195
        on right: 193 195
    block_item <stat> (159)
        on left: 196 197
        on right: 194 195
    expression_statement <expr> (160)
        on left: 198 199
        on right: 179 184 207 208 209 210
    selection_statement <stat> (161)
        on left: 200 201 202
        on right: 180 185
    iteration_statement <stat> (162)
        on left: 203 204 205 206 207 208 209 210
        on right: 181 186
    jump_statement <stat> (163)
        on left: 211 212 213 214 215
        on right: 182 187
    translation_unit (164)
        on left: 216 217
        on right: 0 217
    external_declaration (165)
        on left: 218 219
        on right: 216 217
    function_definition (166)
        on left: 220
        on right: 218
    declaration_list (167)
        on left: 221 222
        on right: 222 224
    declaration_list_opt (168)
        on left: 223 224
        on right: 220


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    REGISTER   shift, and go to state 3
    CHAR       shift, and go to state 4
    CONST      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    ENUM       shift, and go to state 7
    EXTERN     shift, and go to state 8
    FLOAT      shift, and go to state 9
    INLINE     shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  103 storage_class_specifier: AUTO .

    $default  reduce using rule 103 (storage_class_specifier)


State 2

  132 type_qualifier: RESTRICT .

    $default  reduce using rule 132 (type_qualifier)


State 3

  104 storage_class_specifier: REGISTER .

    $default  reduce using rule 104 (storage_class_specifier)


State 4

  106 type_specifier: CHAR .

    $default  reduce using rule 106 (type_specifier)


State 5

  131 type_qualifier: CONST .

    $default  reduce using rule 131 (type_qualifier)


State 6

  111 type_specifier: DOUBLE .

    $default  reduce using rule 111 (type_specifier)


State 7

  122 enum_specifier: ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  123               | ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  124               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 125 (identifier_opt)

    identifier_opt  go to state 33


State 8

  101 storage_class_specifier: EXTERN .

    $default  reduce using rule 101 (storage_class_specifier)


State 9

  110 type_specifier: FLOAT .

    $default  reduce using rule 110 (type_specifier)


State 10

  134 function_specifier: INLINE .

    $default  reduce using rule 134 (function_specifier)


State 11

  108 type_specifier: INT .

    $default  reduce using rule 108 (type_specifier)


State 12

  109 type_specifier: LONG .

    $default  reduce using rule 109 (type_specifier)


State 13

  107 type_specifier: SHORT .

    $default  reduce using rule 107 (type_specifier)


State 14

  112 type_specifier: SIGNED .

    $default  reduce using rule 112 (type_specifier)


State 15

  102 storage_class_specifier: STATIC .

    $default  reduce using rule 102 (storage_class_specifier)


State 16

  113 type_specifier: UNSIGNED .

    $default  reduce using rule 113 (type_specifier)


State 17

  105 type_specifier: VOID .

    $default  reduce using rule 105 (type_specifier)


State 18

  133 type_qualifier: VOLATILE .

    $default  reduce using rule 133 (type_qualifier)


State 19

  114 type_specifier: BOOL .

    $default  reduce using rule 114 (type_specifier)


State 20

  115 type_specifier: COMPLEX .

    $default  reduce using rule 115 (type_specifier)


State 21

  116 type_specifier: IMAGINARY .

    $default  reduce using rule 116 (type_specifier)


State 22

  219 external_declaration: declaration .

    $default  reduce using rule 219 (external_declaration)


State 23

   87 declaration: declaration_specifiers . init_declarator_list SEMICOLON
   88            | declaration_specifiers . SEMICOLON
  220 function_definition: declaration_specifiers . declarator declaration_list_opt changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 34
    ROUND_BRACKET_OPEN  shift, and go to state 35
    MUL                 shift, and go to state 36
    SEMICOLON           shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   89 declaration_specifiers: storage_class_specifier . declaration_specifiers
   90                       | storage_class_specifier .

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    REGISTER   shift, and go to state 3
    CHAR       shift, and go to state 4
    CONST      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    ENUM       shift, and go to state 7
    EXTERN     shift, and go to state 8
    FLOAT      shift, and go to state 9
    INLINE     shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   91 declaration_specifiers: type_specifier . declaration_specifiers
   92                       | type_specifier .

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    REGISTER   shift, and go to state 3
    CHAR       shift, and go to state 4
    CONST      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    ENUM       shift, and go to state 7
    EXTERN     shift, and go to state 8
    FLOAT      shift, and go to state 9
    INLINE     shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  117 type_specifier: enum_specifier .

    $default  reduce using rule 117 (type_specifier)


State 27

   93 declaration_specifiers: type_qualifier . declaration_specifiers
   94                       | type_qualifier .

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    REGISTER   shift, and go to state 3
    CHAR       shift, and go to state 4
    CONST      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    ENUM       shift, and go to state 7
    EXTERN     shift, and go to state 8
    FLOAT      shift, and go to state 9
    INLINE     shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   95 declaration_specifiers: function_specifier . declaration_specifiers
   96                       | function_specifier .

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    REGISTER   shift, and go to state 3
    CHAR       shift, and go to state 4
    CONST      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    ENUM       shift, and go to state 7
    EXTERN     shift, and go to state 8
    FLOAT      shift, and go to state 9
    INLINE     shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  217 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    REGISTER   shift, and go to state 3
    CHAR       shift, and go to state 4
    CONST      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    ENUM       shift, and go to state 7
    EXTERN     shift, and go to state 8
    FLOAT      shift, and go to state 9
    INLINE     shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  216 translation_unit: external_declaration .

    $default  reduce using rule 216 (translation_unit)


State 31

  218 external_declaration: function_definition .

    $default  reduce using rule 218 (external_declaration)


State 32

  124 enum_specifier: ENUM IDENTIFIER .
  126 identifier_opt: IDENTIFIER .

    CURLY_BRACKET_OPEN  reduce using rule 126 (identifier_opt)
    $default            reduce using rule 124 (enum_specifier)


State 33

  122 enum_specifier: ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  123               | ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 49


State 34

  137 direct_declarator: IDENTIFIER .

    $default  reduce using rule 137 (direct_declarator)


State 35

  138 direct_declarator: ROUND_BRACKET_OPEN . declarator ROUND_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 34
    ROUND_BRACKET_OPEN  shift, and go to state 35
    MUL                 shift, and go to state 36

    declarator         go to state 50
    direct_declarator  go to state 41
    pointer            go to state 42


State 36

  152 pointer: MUL . type_qualifier_list_opt
  153        | MUL . type_qualifier_list_opt pointer

    RESTRICT  shift, and go to state 2
    CONST     shift, and go to state 5
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 150 (type_qualifier_list_opt)
